@@ -71,3 +71,5 @@
             Created tool-script for generating abc.wl (issue #15)
             Created abc.wl file (issue #15)
             Implemented 'abc' list test (issue #15)
+            Added english word-list (issue #15)
+            Added word-list test (issue #15)
